Update and rename en-vivo/tyc-sports/index.html to en-vivo/tyc-sports/ar/index.html

--- a/en-vivo/tyc-sports/ar/index.html
+++ b/en-vivo/tyc-sports/ar/index.html
@@ -7,16 +7,16 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver canal TyC Sports en vivo y en directo online. Futbol Libre TV Television gratis por internet">
-<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/tyc-sports/" />
+<link rel="canonical" href="https://futbollibretv.net/en-vivo/tyc-sports/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ver canal TyC Sports en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="Ver canal TyC Sports en vivo, Futbol televisión Libre online en directo. Copa Argentina y seleccion Argentina" />
-<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/tyc-sports/" />
+<meta property="og:url" content="https://futbollibretv.net/en-vivo/tyc-sports/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
 	<link href="../css/styles.css" rel="stylesheet">
   	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-<meta property="og:image" content="https://https://futbollibretv.net/img/logo-canal/TYC_Sports.webp" />
+<meta property="og:image" content="https://futbollibretv.net/img/logo-canal/TYC_Sports.webp" />
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="../../favicon/apple-icon-72x72.png">
@@ -123,7 +123,7 @@
 <div id="item1"><h2>¿Qué es el canal de TyC Sports en vivo?</h2>
 <p align="left"><strong>TyC Sports</strong> es un canal/señal deportiva de la televisión Argentina con el formato de ser un servicio a través de un abono o suscripción. Este brinda una señal especializada en vivo y en directo de diversos sucesos deportivos a nivel tanto adentro de la República Argentina como en el plano internacional. TyC significa por sus siglas “Torneos y Competencias”. En los primeros años era el único canal argentino que se dedicaba exclusivamente las 24 horas del día a transmitir eventos deportivos; a su vez ocupaba el podio entre los cinco canales con más ranking de la televisión argentina. </p> </div>
 <div id="item2"><h2>¿Cómo puedo ver el canal TyC Sports online en vivo y en directo?</h2>
-<p align="left">Para ver el canal TyC Sports gratis en vivo y en directo debes ingresar <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> y hacer click en el logo de <strong>TyC Sports</strong> o en <strong>Ver Canal</strong> que se encuentra debajo del logo. Luego hacer click en el reproductor que se encuentra abajo de "Ver TyC Sports online en VIVO y en directo". Tambien se puede ingresar en el sitio oficial TyCSportsPlay.com la computadora o del celular si es Android o Iphone iOS. También se puede ver en vivo desde la TV con el <strong>Chromecast</strong>. </div>
+<p align="left">Para ver el canal TyC Sports gratis en vivo y en directo debes ingresar <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> y hacer click en el logo de <strong>TyC Sports</strong> o en <strong>Ver Canal</strong> que se encuentra debajo del logo. Luego hacer click en el reproductor que se encuentra abajo de "Ver TyC Sports online en VIVO y en directo". Tambien se puede ingresar en el sitio oficial TyCSportsPlay.com la computadora o del celular si es Android o Iphone iOS. También se puede ver en vivo desde la TV con el <strong>Chromecast</strong>. </div>
 
 </p>
 <div id="item3"><h2>Programación de TyC Sports en vivo y en directo las 24 horas</h2>
@@ -148,7 +148,7 @@
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
