--- a/en-vivo/vtv-plus-uruguay/index.html
+++ b/en-vivo/vtv-plus-uruguay/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver Canal VTV Plus Uruguay en VIVO Online por Internet en DIRECTO. Futbol Libre TV Television gratis por internet">
-<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" />
+<link rel="canonical" href="https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Fútbol Libre TV. Click para ver VTV Plus Uruguay en VIVO ONLINE por Internet en DIRECTO" />
@@ -15,11 +15,11 @@
 <meta property="og:site_name" content="Fútbol Libre TV" />
 	<link href="../css/styles.css" rel="stylesheet">
   	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-<meta property="og:image" content="https://https://futbollibretv.net/img/VTV_Plus2.png" />
+<meta property="og:image" content="https://futbollibretv.net/img/VTV_Plus2.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fútbol Libre TV Ver Canal VTV Plus Uruguay en VIVO ONLINE por Internet en DIRECTO. Mirar Futbol argentino en vivo" />
 <meta name="twitter:title" content="Fútbol Libre TV Ver Canal VTV Plus Uruguay en VIVO ONLINE en DIRECTO por Internet" />
-<meta name="twitter:image" content="https://https://futbollibretv.net/img/VTV_Plus2.png" />
+<meta name="twitter:image" content="https://futbollibretv.net/img/VTV_Plus2.png" />
 	
 <title>Ver Canal VTV Plus Uruguay online en VIVO y en directo. Futbol Libre TV</title>
 	
@@ -113,7 +113,7 @@
 </div>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
-<center><img align="text-center" src="https://https://futbollibretv.net/img/logo-canal/VTV_Plus2.png" alt="Logo del canal VTV Plus Uruguay" title="VTV Plus Uruguay en vivo y en directo" width="%50" height="140" /></center><br /><br />
+<center><img align="text-center" src="https://futbollibretv.net/img/logo-canal/VTV_Plus2.png" alt="Logo del canal VTV Plus Uruguay" title="VTV Plus Uruguay en vivo y en directo" width="%50" height="140" /></center><br /><br />
 	
 	
 	<ul>
@@ -138,16 +138,16 @@
 <p align="left">
 	
 	
-	Para poder ver y sintonizar el canal de uruguay <strong><a href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> gratis en vivo y en directo debe ir al home de <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> a la hora que se esten disputando los partidos de la <strong>Liga Uruguaya</strong> y buscar el logo de este canal o la agenda con los horarios, para luego avanzar al canal donde deberá click en Play en el reproductor debajo de "<strong>Canal VTV Plus Uruguay Online en VIVO y en directo</strong>". Está tambien la opcion para ver <strong><a href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> en directo online por la pagina oficial de vtv.com.uy desde cualquier <strong>computadora/ordenador</strong> y <strong>celular</strong>. </div> </p>
+	Para poder ver y sintonizar el canal de uruguay <strong><a href="https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> gratis en vivo y en directo debe ir al home de <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> a la hora que se esten disputando los partidos de la <strong>Liga Uruguaya</strong> y buscar el logo de este canal o la agenda con los horarios, para luego avanzar al canal donde deberá click en Play en el reproductor debajo de "<strong>Canal VTV Plus Uruguay Online en VIVO y en directo</strong>". Está tambien la opcion para ver <strong><a href="https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> en directo online por la pagina oficial de vtv.com.uy desde cualquier <strong>computadora/ordenador</strong> y <strong>celular</strong>. </div> </p>
 	
 	
 <div id="item3"><h2>Programación de VTV Plus Uruguay en vivo y en directo las 24 horas</h2>
-<p align="left"> La programación del canal <strong><a href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> se puede ver gratis todos los partidos de la <strong>Liga de Futból de Uruguay</strong>, incluidos los juegos de <strong>Peñarol</strong>, <strong>Nacional</strong>, Montevideo Wanderers y la <strong>selección Uruguaya</strong>. Tambien en la programación estan incluidos los programas de Pasión Noticias, Pasión Fútbol, Pasión de Carnaval y los partidos de la segunda división de Uruguay.	</p> </div>
+<p align="left"> La programación del canal <strong><a href="https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong> se puede ver gratis todos los partidos de la <strong>Liga de Futból de Uruguay</strong>, incluidos los juegos de <strong>Peñarol</strong>, <strong>Nacional</strong>, Montevideo Wanderers y la <strong>selección Uruguaya</strong>. Tambien en la programación estan incluidos los programas de Pasión Noticias, Pasión Fútbol, Pasión de Carnaval y los partidos de la segunda división de Uruguay.	</p> </div>
 	
 	
 	
 	<div id="item4"><h2>¿Cómo ver los partidos de fútbol en directo por VTV Plus Uruguay?</h2>
-<p align="left">Para poder ver los partidos en vivo del Campeonato Uruguayo de Primera División deberá sintonizar algunos de los canales encargados de transmitir los partidos y los cuales son: <strong><a href="https://https://futbollibretv.net/star-plus/" title="Ver Star Plus en vivo y en directo">Star Plus</a></strong>, <strong><a href="https://https://futbollibretv.net/en-vivo/gol-tv/" title="Ver Canal Goltv en vivo y en directo">GOLTV</a></strong> y <strong><a href="https://https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong>.
+<p align="left">Para poder ver los partidos en vivo del Campeonato Uruguayo de Primera División deberá sintonizar algunos de los canales encargados de transmitir los partidos y los cuales son: <strong><a href="https://futbollibretv.net/star-plus/" title="Ver Star Plus en vivo y en directo">Star Plus</a></strong>, <strong><a href="https://futbollibretv.net/en-vivo/gol-tv/" title="Ver Canal Goltv en vivo y en directo">GOLTV</a></strong> y <strong><a href="https://futbollibretv.net/en-vivo/vtv-plus-uruguay/" title="Ver VTV + Plus Uruguay online en vivo y en directo por internet gratis">VTV + Plus</a></strong>.
 	
 	</p> </div>
 	
@@ -175,7 +175,7 @@
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 
                               </script>
