--- a/en-vivo/espn-premium/index.html
+++ b/en-vivo/espn-premium/index.html
@@ -58,8 +58,7 @@
                 <ul class="nav-links">
                     <li><a href="/en-vivo/espn-1/">ESPN</a></li>
                     <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
-                    <li><a href="/en-vivo/directv-sports
-/">DS Sports</a></li>
+               
                     <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
                     <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
                 </ul>
@@ -92,7 +91,7 @@
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
 <div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" src="//bestformula.one/dtvpl2.html?id=1125&lang=1" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen=""></iframe>
+<iframe allow="encrypted-media" src="https://mastu.mojalelo.bar/dtvpl2.php?id=1125&lang=1" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen=""></iframe>
 </div>
 <div align="left">
 <p><strong>Opciones:</strong></p>
