--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
 <a href="/en-vivo/tyc-sports/"><img src="../img/logo-canal/TYC_Sports.webp?" title="Ver el canal TYC Sports en HD online en VIVO y en directo" alt="Logo de TYC Sports" width="204"></a>
-<li>Ver <strong>TYC Sports</strong> online en vivo y en directo.</li>
+<li><strong>TYC Sports</strong>, canal argentino líder del deporte.</li>
 </ul>
 <a href="/en-vivo/tyc-sports/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver Canal</button></a>
 </div>
@@ -130,7 +130,7 @@
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
 <a href="/en-vivo/tnt-sports-online/"><img src="../img/logo-canal/TNT_Sports.webp" title="Ver TNT Sports Premium Online en VIVO y en directo" alt="Logo de TNT Sports Premium" width="204"></a>
-<li>Ver <strong>TNT Sports Premium</strong> online en vivo y en directo</li>
+<li><strong>TNT Sports</strong>, canal que transmite la <strong>Liga Profesional de Fútbol</strong></li>
 </ul>
 <a href="/en-vivo/tnt-sports-online/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -143,7 +143,7 @@
 <a href="/en-vivo/espn-premium/"><img src="../img/logo-canal/espn_premium.png
 " title="Ver ESPN Premium online en VIVO" alt="Logo de ESPN Premium" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Ver <strong>ESPN Premium</strong> online en vivo y en directo</li>
+<li><strong>ESPN Premium</strong> (Antes Fox Sports Premium). Transmite la <strong>LPF</strong></li>
 </ul>
 <a href="/en-vivo/espn-premium/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -155,7 +155,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-1/"><img src="../img/logo-canal/ESPN.webp" title="Ver ESPN 1 en VIVO y en directo" alt="Logo de ESPN 1" width="204"></a>
 	<ul class="list-unstyled mt-3 mb-5">
-<li>Ver <strong>ESPN 1</strong> online en vivo y en directo</li>
+<li>Toda la programación en HD del canal <strong>ESPN 1</strong></li>
 </ul>
 <a href="/en-vivo/espn-1/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -167,7 +167,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-2/"><img src="../img/logo-canal/ESPN_2.webp" title="Ver ESPN 2 en VIVO y en directo" alt="Logo de ESPN 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Ver <strong>ESPN 2</strong> online en vivo y en direco</li>
+<li>Toda la programación en HD del canal <strong>ESPN 2</strong></li>
 </ul>
 <a href="/en-vivo/espn-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -179,7 +179,7 @@
 <div class="card-body">
 <a href="/en-vivo/fox-sports-1/"><img src="../img/logo-canal/Fox-Sports.png" title="Ver Fox Sports 1 en VIVO y en directo" alt="Logo de Fox Sports 1 online" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Ver <strong>Fox Sports 1</strong> online en vivo y en directo</li>
+<li>Toda la programación en HD del canal <strong>Fox Sports 1</strong></li>
 </ul>
 <a href="/en-vivo/fox-sports-1/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -191,7 +191,7 @@
 <div class="card-body">
 <a href="/en-vivo/fox-sports-2/"><img src="../img/logo-canal/Fox-Sports-2.png" title="Ver Fox Sports 2 en VIVO" alt="Logo de Fox Sports 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Ver <strong>Fox Sports 2</strong> online en vivo y en directo</li>
+<li>Toda la programación en HD del canal <strong>Fox Sports 2</strong></li>
 </ul>
 <a href="/en-vivo/fox-sports-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -203,7 +203,7 @@
 <div class="card-body">
 <a href="/en-vivo/fox-sports-3/"><img src="../img/logo-canal/Fox-Sports-2.png" title="Ver Fox Sports 3 en VIVO" alt="Logo de Fox Sports 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Ver <strong>Fox Sports 3</strong> online en vivo y en directo</li>
+<li>Toda la programación en HD del canal <strong>Fox Sports 3</strong></li>
 </ul>
 <a href="/en-vivo/fox-sports-3/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -217,7 +217,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-3/"><img src="../img/logo-canal/ESPN_3.webp" title="Ver ESPN 3 en VIVO" alt="Logo de ESPN 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Ver <strong>ESPN 3</strong> online en vivo y en directo</li>
+<li>Toda la programación en HD del canal <strong>ESPN 3</strong></li>
 </ul>
 <a href="/en-vivo/espn-3/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -229,7 +229,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-extra/"><img src="../img/logo-canal/ESPN_Extra_new.png" title="Ver ESPN Extra en VIVO" alt="Logo de ESPN Extra" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Ver <strong>ESPN Extra</strong> online en vivo y en directo</li>
+<li>Toda la programación en HD del canal <strong>ESPN Extra</strong></li>
 </ul>
 <a href="/en-vivo/espn-extra/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -256,7 +256,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/tv-publica/"><img src="../img/logo-canal/TV_Publica.webp" title="Ver TV Pública en VIVO" alt="Logo de la TV Pública" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>TV Pública</strong>  online en vivo y en directo</li>
+<li><strong>Televisión Pública Argentina</strong>, canal de televisión abierta argentino</li>
 </ul>
 <a href="/en-vivo/tv-publica/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -269,7 +269,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/deportv/"><img src="../img/logo-canal/DeporTV.png" title="Ver DeporTV en VIVO" alt="Logo de DeporTV" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>DeporTV</strong> online en vivo y en directo</li>
+<li><strong>DeporTV</strong>, canal público de deportes de Argentina.</li>
 </ul>
 <a href="/en-vivo/deportv/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -286,7 +286,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/vtv-plus-uruguay/"><img src="../img/logo-canal/VTV_Plus_up.png" title="Ver VTV Plus en Vivo y en Directo" alt="Logo de VTV Plus TV" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>VTV Plus</strong> online en vivo y en directo</li>
+<li><strong>VTV</strong>, canal deportivo Uruguayo</li>
 </ul>
 <a href="/en-vivo/vtv-plus-uruguay/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -299,7 +299,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/tudn/"><img src="../img/logo-canal/TUDN.webp" title="Ver TUDN en Vivo y en Directo" alt="Logo de TUDN TV" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>TUDN</strong> online en vivo y en directo</li>
+<li><strong>TUDN</strong>, canal mexicano/estadounidense especializado en deportes</li>
 </ul>
 <a href="/en-vivo/tudn/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
