--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
 <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png">
+	<!--Google GPT/ADM code -->
+<script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script type="text/javascript">
+    window.googletag = window.googletag || { cmd: [] };
+    window.googletag.cmd.push(function () {
+        window.googletag.pubads().enableSingleRequest();
+    });
+</script>
+
+<!--Site config -->
+<script type="text/javascript" async="async" src="https://protagcdn.com/s/futbollibretv.net/site.js"></script>
+<script type="text/javascript">
+    window.protag = window.protag || { cmd: [] };
+    window.protag.config = { s:'futbollibretv.net', childADM: '22187115763', l: 'Arf30PQf' };
+    window.protag.cmd.push(function () {
+        window.protag.pageInit();
+    });
+</script>
 <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png">
 <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png">
 <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png">
