--- a/player/j.html
+++ b/player/j.html
@@ -70,6 +70,13 @@
 .btn-fl:hover {
     cursor: pointer;
 }
+	    background-color: #57B230;
+    width: 100%px;
+    padding: 12px;
+    color: #002399;
+    box-shadow: 0px 1px 1px #333;
+    -webkit-box-shadow: 0px 1px 1px #333;
+    -moz-box-shadow: 0px 1px 1px #333;
 </style>
 
 <link href="../css/portada.css" rel="stylesheet">
