--- a/player/j.html
+++ b/player/j.html
@@ -72,6 +72,7 @@
 }
 	    background-color: #57B230;
     width: 100%px;
+	heigth:100%
     padding: 12px;
     color: #002399;
     box-shadow: 0px 1px 1px #333;
