--- a/en-vivo/tyc-sports/ar/index.html
+++ b/en-vivo/tyc-sports/ar/index.html
@@ -14,7 +14,7 @@
 <meta property="og:description" content="Ver canal TyC Sports en vivo, Futbol televisión Libre online en directo. Copa Argentina y seleccion Argentina" />
 <meta property="og:url" content="https://futbollibretv.net/en-vivo/tyc-sports/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-	<link href="../css/styles.css" rel="stylesheet">
+	<link href="/css/styles.css" rel="stylesheet">
   	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <meta property="og:image" content="https://futbollibretv.net/img/logo-canal/TYC_Sports.webp" />
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
@@ -36,9 +36,9 @@
 <meta name="theme-color" content="#ffffff">
 <title>Ver TyC Sports online en VIVO y en directo. Futbol Libre TV</title>
 
-<link href="../../css/bootstrap.css" rel="stylesheet">
+<link href="/css/bootstrap.css" rel="stylesheet">
 
-<link href="../../css/portada.css" rel="stylesheet">
+<link href="/css/portada.css" rel="stylesheet">
 <style type="text/css"> iframe{width: 90%; height: 600px;}@media only screen and (max-width: 600px){iframe{width: 100%; height: 360px;}}</style>
 </head>
 <body>
