--- a/agenda/index.html
+++ b/agenda/index.html
@@ -110,9 +110,9 @@ Amistoso internacional: Alemania vs. Francia
 <li class="ELI"><a href="#">
 Eliminatorias Sudamericanas: Bolivia vs. Argentina
 <span class="t">21:00</span></a>
-<ul>
+<ul><li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9tb3VwYS5nb2x1aC5jcmVkaXQvZHR2cGwyLnBocD9pZD0xMjQw" target="_top">TyC Sports<span>Calidad 720p</span></a></li>
+
 <li class="subitem1"><a href="/en-vivo/tv-publica/" target="_top">TV Pública<span>Calidad 720p</span></a></li>
-<li class="subitem1"><a href="/en-vivo/tyc-sports/ar/" target="_top">TyC Sports<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly90aGFpZnJlZS5hc2lhL2R0dnBsMi5odG1sP2lkPTExNjI" target="_top">Mega CL<span>Calidad 720p</span></a></li>
 <li class="subitem1"><a href="/embed/eventos/?r=aHR0cHM6Ly9lbWJlZC5saWJyZWZ1dGJvbHR2LmNvbS92ZW5ldmlzaW9uLmh0bWw" target="_top">Venevisión<span>Calidad 720p</span></a></li>
 </ul>
