--- a/en-vivo/tnt-sports-online/index.html
+++ b/en-vivo/tnt-sports-online/index.html
@@ -95,11 +95,11 @@
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
 <div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" src="//bestformula.one/dtvpl2.html?id=1233" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>
+<iframe allow="encrypted-media" src="https://tucanaldeportivo.com/tntsports.php" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>
 </div>
 <div align="left">
 <p><strong>Opciones:</strong></p>
-<a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1233" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1233'">Opción 1</a>
+<a class="btn btn-fl" target="iframe" href="https://tucanaldeportivo.com/tntsports.php" onclick="document.getElementById('iframe').src='https://tucanaldeportivo.com/tntsports.php'">Opción 1</a>
 <a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=VE5UX1Nwb3J0c19IRA" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=VE5UX1Nwb3J0c19IRA'">Opción 2</a>
 <a class="btn btn-fl" target="iframe" href="//germanblogs.beauty/tntsports.html" onclick="document.getElementById('iframe').src='//germanblogs.beauty/tntsports.html'">Opción 3</a>
 </div>
