--- a/index.html
+++ b/index.html
@@ -410,11 +410,9 @@
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
 <div class="row">
 <div class="col-6 col-md">
-<h5>Social</h5>
+<h5>Contact Us</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://twitter.com/LibreFutbolTV1" target="_blank">Twitter</a></li>
-<li><a class="text-muted" href="https://www.instagram.com/librefutbolweb/" target="_blank">Instagram</a></li>
-<li><a class="text-muted" href="https://www.youtube.com/channel/UCNdS4deWHyFLqB8o49wqo7A" target="_blank">YouTube</a></li>
+<li><a class="text-muted" href="https://forms.gle/Jj4EgVuQ6YUTMzuW9" target="_blank">Contacto</a></li>
 </ul>
 </div>
 <div class="col-6 col-md">
