--- a/es/index.html
+++ b/es/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://futbollibretv.net/" />
+<link rel="canonical" href="https://futbollibretv.net/es/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 	
@@ -13,7 +13,7 @@
 <meta property="og:type" content="website" />
 	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <meta property="og:title" content="Fútbol Libre TV - Todos los canales de deportes"/><meta property="og:description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Superliga, Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
-<meta property="og:url" content="https://futbollibretv.net/" />
+<meta property="og:url" content="https://futbollibretv.net/es/" />
 <meta property="og:site_name" content="Fútbol Libre TV Online en VIVO y en directo" />
 <meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
@@ -56,7 +56,7 @@
 </style>
 
 <link href="../css/portada.css" rel="stylesheet">
-<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/futbollibretv.net\/","name":"Fútbol Libre TV"}</script>
+<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/futbollibretv.net\es/","name":"Fútbol Libre TV"}</script>
 <style type="text/css">@media screen and (min-width:0px) and (max-width:767px){.iframe-container iframe{height:266px}}</style>
 </head>
 <body>
