--- a/es/index.html
+++ b/es/index.html
@@ -56,7 +56,7 @@
 </style>
 
 <link href="../css/portada.css" rel="stylesheet">
-<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/futbollibretv.net\es/","name":"Fútbol Libre TV"}</script>
+<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http://futbollibretv.net/es/","name":"Fútbol Libre TV"}</script>
 <style type="text/css">@media screen and (min-width:0px) and (max-width:767px){.iframe-container iframe{height:266px}}</style>
 </head>
 <body>
