--- a/es/index.html
+++ b/es/index.html
@@ -56,46 +56,19 @@
 </style>
 
 <link href="../css/portada.css" rel="stylesheet">
-<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http://futbollibretv.net/es/","name":"Fútbol Libre TV"}</script>
+<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/futbollibretv.net\/","name":"Fútbol Libre TV"}</script>
 <style type="text/css">@media screen and (min-width:0px) and (max-width:767px){.iframe-container iframe{height:266px}}</style>
 </head>
 <body>
-<nav>
-        <div class="nav-bar">
-            <i class='bx bx-menu sidebarOpen' ></i>
-            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
-            <div class="menu">
-                <div class="logo-toggle">
-                    <span class="logo"><a href="#"><img src="https://futbollibretv.net/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
-                    <i class='bx bx-x siderbarClose'></i>
-                </div>
-                <ul class="nav-links">
-                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
-                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
-   
-                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
-                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>   
-			 <li><a href="https://forms.gle/Jj4EgVuQ6YUTMzuW9">DOMINIO EN VENTA</a></li>   
-                </ul>
-            </div>
-            <div class="darkLight-searchBox">
-                <div class="dark-light">
-                    <i class='bx bx-moon moon'></i>
-                    <i class='bx bx-sun sun'></i>
-                </div>
-                <div class="searchBox">
-                   <div class="searchToggle">
-                    <i class='bx bx-x cancel'></i>
-                    <i class='bx bx-search search'></i>
-                   </div>
-                    <div class="search-field">
-                        <input type="text" placeholder="Search...">
-                        <i class='bx bx-search'></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="/">
+Fútbol Libre TV
+</a>
+
+<a class="btn btn-outline-fl" rel="home" href="/">
+<img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
+</a>
+</div>
 
 
 
@@ -119,7 +92,7 @@
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
 <a href="/en-vivo/tyc-sports/"><img src="../img/logo-canal/TYC_Sports.webp?" title="Ver el canal TYC Sports en HD online en VIVO y en directo" alt="Logo de TYC Sports" width="204"></a>
-<li><strong>TYC Sports</strong>, canal argentino líder del deporte.</li>
+<li><strong>TYC Sports</strong>, canal argentino líder del deporte.<br /></li>
 </ul>
 <a href="/en-vivo/tyc-sports/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver Canal</button></a>
 </div>
@@ -145,7 +118,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-1/"><img src="../img/logo-canal/ESPN.webp" title="Ver ESPN 1 en VIVO y en directo" alt="Logo de ESPN 1" width="204"></a>
 	<ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN 1</strong></li>
+<li>Toda la programación en HD del canal <strong>ESPN 1</strong><br /></li>
 </ul>
 <a href="/en-vivo/espn-1/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -157,7 +130,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-2/"><img src="../img/logo-canal/ESPN_2.webp" title="Ver ESPN 2 en VIVO y en directo" alt="Logo de ESPN 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN 2</strong></li>
+<li>Toda la programación en HD del canal <strong>ESPN 2</strong><br /></li>
 </ul>
 <a href="/en-vivo/espn-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -169,7 +142,7 @@
 <div class="card-body">
 <a href="/en-vivo/fox-sports-1/"><img src="../img/logo-canal/Fox-Sports.png" title="Ver Fox Sports 1 en VIVO y en directo" alt="Logo de Fox Sports 1 online" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Toda la programación en HD del canal <strong>Fox Sports 1</strong></li>
+<li>Toda la programación en HD del canal <strong>Fox Sports 1</strong><br /></li>
 </ul>
 <a href="/en-vivo/fox-sports-1/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -181,7 +154,7 @@
 <div class="card-body">
 <a href="/en-vivo/fox-sports-2/"><img src="../img/logo-canal/Fox-Sports-2.png" title="Ver Fox Sports 2 en VIVO" alt="Logo de Fox Sports 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Toda la programación en HD del canal <strong>Fox Sports 2</strong></li>
+<li>Toda la programación en HD del canal <strong>Fox Sports 2</strong><br /></li>
 </ul>
 <a href="/en-vivo/fox-sports-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -193,7 +166,7 @@
 <div class="card-body">
 <a href="/en-vivo/fox-sports-3/"><img src="../img/logo-canal/Fox-Sports-2.png" title="Ver Fox Sports 3 en VIVO" alt="Logo de Fox Sports 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Toda la programación en HD del canal <strong>Fox Sports 3</strong></li>
+<li>Toda la programación en HD del canal <strong>Fox Sports 3</strong><br /></li>
 </ul>
 <a href="/en-vivo/fox-sports-3/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -207,7 +180,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-3/"><img src="../img/logo-canal/ESPN_3.webp" title="Ver ESPN 3 en VIVO" alt="Logo de ESPN 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN 3</strong></li>
+<li>Toda la programación en HD del canal <strong>ESPN 3</strong><br /></li>
 </ul>
 <a href="/en-vivo/espn-3/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -219,7 +192,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-extra/"><img src="../img/logo-canal/ESPN_Extra_new.png" title="Ver ESPN Extra en VIVO" alt="Logo de ESPN Extra" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN Extra</strong></li>
+<li>Toda la programación en HD del canal <strong>ESPN Extra</strong><br /></li>
 </ul>
 <a href="/en-vivo/espn-extra/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -246,7 +219,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/tv-publica/"><img src="../img/logo-canal/TV_Publica.webp" title="Ver TV Pública en VIVO" alt="Logo de la TV Pública" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>Televisión Pública Argentina</strong>, canal de televisión abierta argentino</li>
+<li><strong>Televisión Pública Argentina</strong>, canal de televisión abierta argentino<br /></li>
 </ul>
 <a href="/en-vivo/tv-publica/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -259,7 +232,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/deportv/"><img src="../img/logo-canal/DeporTV.png" title="Ver DeporTV en VIVO" alt="Logo de DeporTV" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>DeporTV</strong>, canal público de deportes de Argentina.</li>
+<li><strong>DeporTV</strong>, canal público de deportes de Argentina.<br /></li>
 </ul>
 <a href="/en-vivo/deportv/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -276,7 +249,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/vtv-plus-uruguay/"><img src="../img/logo-canal/VTV_Plus_up.png" title="Ver VTV Plus en Vivo y en Directo" alt="Logo de VTV Plus TV" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>VTV</strong>, canal deportivo Uruguayo</li>
+<li><strong>VTV</strong>, canal deportivo Uruguayo<br /></li>
 </ul>
 <a href="/en-vivo/vtv-plus-uruguay/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
