--- a/en-vivo/espn-1/index.html
+++ b/en-vivo/espn-1/index.html
@@ -44,42 +44,15 @@
 <link href="../../css/portada.css" rel="stylesheet">
 </head>
 <body>
-<nav>
-        <div class="nav-bar">
-            <i class='bx bx-menu sidebarOpen' ></i>
-            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
-            <div class="menu">
-                <div class="logo-toggle">
-                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
-                    <i class='bx bx-x siderbarClose'></i>
-                </div>
-                <ul class="nav-links">
-                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
-                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
-                    <li><a href="/en-vivo/directv-sports
-/">DS Sports</a></li>
-                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
-                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
-                </ul>
-            </div>
-            <div class="darkLight-searchBox">
-                <div class="dark-light">
-                    <i class='bx bx-moon moon'></i>
-                    <i class='bx bx-sun sun'></i>
-                </div>
-                <div class="searchBox">
-                   <div class="searchToggle">
-                    <i class='bx bx-x cancel'></i>
-                    <i class='bx bx-search search'></i>
-                   </div>
-                    <div class="search-field">
-                        <input type="text" placeholder="Search...">
-                        <i class='bx bx-search'></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="/">
+Fútbol Libre TV
+</a>
+
+<a class="btn btn-outline-fl" rel="home" href="/">
+<img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
+</a>
+</div>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
