--- a/en-vivo/vtv-plus-uruguay/index.html
+++ b/en-vivo/vtv-plus-uruguay/index.html
@@ -49,47 +49,61 @@
 	
 	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script>	
-	
+<script type="text/javascript" async="async" src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script type="text/javascript">
+    window.googletag = window.googletag || { cmd: [] };
+    window.googletag.cmd.push(function () {
+        window.googletag.pubads().enableSingleRequest();
+    });
+</script>
+
+<script type="text/javascript" async="async" src="https://protagcdn.com/s/futbollibretv.net/site.js"></script>
+<script type="text/javascript">
+    window.protag = window.protag || { cmd: [] };
+    window.protag.config = { s:'futbollibretv.net', childADM: '22187115763', l: 'Arf30PQf' };
+    window.protag.cmd.push(function () {
+        window.protag.pageInit();
+    });
+</script>
+<style type="text/css" rel="stylesheet">.tg-marca td,.tg-marca th{overflow:hidden;word-break:normal}.tg-marca{width:70%;border-collapse:collapse;border-spacing:0;border-color:#aaa;border-width:0;margin-bottom:0}.tg-marca td{text-align:center;padding:7px 2px;color:#333;background-color:#fff}.tg-marca th{text-align:left;font-weight:400;padding:4px;border-style:solid;border-width:0;border-color:#aaa;color:#fff;background:#64a832}.tg-marca tr{border:1px solid #e8e8e8}.participant-name{white-space:nowrap}.assist{color:#B0B0B0}#goleslocal,#golesvisitante{font-size:25px;width:16px}#escudolocal,#escudovisitante{min-width:65px;height:55px}#torneot{height:17px}#tiempo{min-width:30px}#local,#visitante{width:35%}</style>
+<script type="text/javascript">
+         function getParameterByName(name) {
+             name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+             var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+                 results = regex.exec(location.search);
+             return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+         }
+          id = getParameterByName('p');
+         if(getParameterByName('embed')){
+            embed = getParameterByName('embed');
+         }else{
+            if(getParameterByName('r')){
+                embed = getParameterByName('r');
+             }else{
+                embed = false;
+         }  
+         }
+         
+
+      </script>
+
 </head>
 <body>
+<div id="navbar"></div>
+<script>
+$(document).ready(function() {
+$("#navbar").load("../../html/navbar.html");
+});
+</script>
 
-<nav>
-        <div class="nav-bar">
-            <i class='bx bx-menu sidebarOpen' ></i>
-            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
-            <div class="menu">
-                <div class="logo-toggle">
-                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
-                    <i class='bx bx-x siderbarClose'></i>
-                </div>
-                <ul class="nav-links">
-                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
-                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
-                    <li><a href="/en-vivo/directv-sports
-/">DS Sports</a></li>
-                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
-                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
-                </ul>
-            </div>
-            <div class="darkLight-searchBox">
-                <div class="dark-light">
-                    <i class='bx bx-moon moon'></i>
-                    <i class='bx bx-sun sun'></i>
-                </div>
-                <div class="searchBox">
-                   <div class="searchToggle">
-                    <i class='bx bx-x cancel'></i>
-                    <i class='bx bx-search search'></i>
-                   </div>
-                    <div class="search-field">
-                        <input type="text" placeholder="Search...">
-                        <i class='bx bx-search'></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+         <div id="protag-header"></div>
+<script type="text/javascript">
+    window.googletag = window.googletag || { cmd: [] };
+    window.protag = window.protag || { cmd: [] };
+    window.protag.cmd.push(function () {
+        window.protag.display("protag-header");
+    });
+</script>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
