--- a/en-vivo/deportv/index.html
+++ b/en-vivo/deportv/index.html
@@ -106,14 +106,11 @@ $("#navbar").load("../../html/navbar.html");
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
 <div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" src="//bestformula.one/dtvpl2.html?id=1056" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>
+<script type="text/javascript">
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0"scrolling="auto" allow="autoplay; encrypted-media" sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}else{document.write('<img class="embed-responsive-item" src="https://pbs.twimg.com/media/DjY2G6tV4AA5-0p.jpg" width="100%">')}
+                        </script>
 </div>
-<div align="left">
-<p><strong>Opciones:</strong></p>
-<a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1056" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1056'">Opción 1</a>
-<a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=RGVwb3JUVkhE" onclick="document.getElementById('iframe').src='///embed49.thaidomains.co.in/cvatt.html?get=RGVwb3JUVkhE'">Opción 2</a>
-</div>
-</ul>
+
 <button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
 </div>
 </div>
