--- a/en-vivo/espn-3/index.html
+++ b/en-vivo/espn-3/index.html
@@ -102,30 +102,22 @@ $("#navbar").load("../../html/navbar.html");
     });
 </script>
 <div class="container">
-<div class="card-deck mb-3 text-center">
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h1 class="my-0 font-weight-normal">ESPN 3 en VIVO</h1>
-</div>
-
-
-<div class="card-body">
-<ul class="list-unstyled mt-3 mb-4">
+<div class="jumbotron">
+<div class="row">
+<div class="col">
+<div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" src="https://bestformula.one/dtvpl2.html?id=1103" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>
-</div>
-<div align="left">
-<p><strong>Opciones:</strong></p>
-<a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1103" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1103'">Opción 1 (AR)</a>
-<a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=RVNQTjM" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=RVNQTjM'">Opción 2 (AR)</a>
-<a class="btn btn-fl" target="iframe" href="https://bestformula.one/dtvpl2.html?id=1102" onclick="document.getElementById('iframe').src='https://bestformula.one/dtvpl2.html?id=1102'">Opción 3 (Cono Sur)</a>
-<a class="btn btn-fl" target="iframe" href="https://bestformula.one/dtvpl2.html?id=1101" onclick="document.getElementById('iframe').src='https://bestformula.one/dtvpl2.html?id=1101'">Opción 4 (MX)</a>
-</div>
-</ul>
-<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
+<script type="text/javascript">
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                        </script>
 </div>
 </div>
 </div>
+</div>
+
+
+</div>
+<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <p align="left"><strong>ESPN 3 en vivo</strong> es una señal multiplataforma de la cadena ESPN, que comenzó a emitir el 14 de noviembre de 2011 para toda América Latina. Está dedicado a un público más joven, su perfil es de hombres entre 16 y 24 años de edad, con nivel económico alto. <strong>ESPN3</strong> es el primer canal deportivo en <strong>Latinoamérica</strong> que tiene la disponibilidad de verse en forma simultánea en diferentes plataformas, es decir, tanto en televisión, celulares, computadores y tabletas digitales.</p>
