--- a/en-vivo/espn-premium/index.html
+++ b/en-vivo/espn-premium/index.html
@@ -100,27 +100,22 @@ $("#navbar").load("../../html/navbar.html");
     });
 </script>
 <div class="container">
-<div class="card-deck mb-3 text-center">
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h1 class="my-0 font-weight-normal">Canal ESPN Premium Online en VIVO y en directo</h1>
-<h2 class="my-0 font-weight-normal">Futbol Libre TV - ESPN Premium</h2>
-</div>
-<div class="card-body">
-<ul class="list-unstyled mt-3 mb-4">
+<div class="jumbotron">
+<div class="row">
+<div class="col">
+<div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" src="https://mastu.mojalelo.bar/dtvpl2.php?id=1125&lang=1" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen=""></iframe>
-</div>
-<div align="left">
-<p><strong>Opciones:</strong></p>
-<a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1125&lang=1" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1125&lang=1'">Opción 1</a>
-<a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=Rm94X1Nwb3J0c19QcmVtaXVuX0hE&lang=1" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=Rm94X1Nwb3J0c19QcmVtaXVuX0hE&lang=1'">Opción 2</a>
-</div>
-</ul>
-<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
+<script type="text/javascript">
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                        </script>
 </div>
 </div>
 </div>
+</div>
+
+
+</div>
+<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <center><img src="//https://futbollibretv.net/img/ESPN_Premium.png" alt="Logo del canal ESPN Premium" title="ESPN Premium en vivo" width="%50" height="140" /></center>
