--- a/en-vivo/fox-sports-2/index.html
+++ b/en-vivo/fox-sports-2/index.html
@@ -101,44 +101,22 @@ $("#navbar").load("../../html/navbar.html");
     });
 </script>
 <div class="container">
-<div class="card-deck mb-3 text-center">
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h1 class="my-0 font-weight-normal">Fox Sports 2 en VIVO</h1>
-<h2 class="my-0 font-weight-normal">Transmisión en vivo del canal Fox Sports 2</h2>
+<div class="jumbotron">
+<div class="row">
+<div class="col">
+<div class="card  box-shadow ">
+<div class="embed-responsive embed-responsive-16by9">
+<script type="text/javascript">
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                        </script>
 </div>
-<ul class="list-unstyled mt-3 mb-4">
-<style>
-   
-                            
-                            .iframe-container {
-                                overflow: hidden;
-                                padding-top: 56.25%;
-                                position: relative
-                            }
-                            
-                            .iframe-container iframe {
-                                border: 0;
-                                height: 100%;
-                                left: 0;
-                                position: absolute;
-                                top: 0;
-                                width: 100%
-                            }
-                        </style>
-<div class="iframe-container">
-<iframe allow="encrypted-media" class="embed-responsive-item" width="100%" height="100%" src="//bestformula.one/dtvpl2.html?id=1122" name="iframe" id="iframe" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
+</div>
 </div>
 
-<div align="left">
-<p><strong>Opciones:</strong></p>
-<a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1122" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1122'">Opción 1 (CL)</a>
-<a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=Rm94U3BvcnRzMkhE" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=Rm94U3BvcnRzMkhE'">Opción 2 (AR)</a>
-<a class="btn btn-fl" target="iframe" href="https://bestformula.one/dtvpl2.html?id=1120" onclick="document.getElementById('iframe').src='https://bestformula.one/dtvpl2.html?id=1120'">Opción 3 (MX)</a>
-</ul>
-<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
+
 </div>
-</div>
+<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <img src="//https://futbollibretv.net/img/Fox-Sports-2.png" alt="Logo del canal Fox Sports 2" title="Fox Sports 2 en vivo" width="%50" height="140" /><br><br>
