--- a/en-vivo/tudn/index.html
+++ b/en-vivo/tudn/index.html
@@ -96,22 +96,22 @@ $("#navbar").load("../../html/navbar.html");
     });
 </script>
 <div class="container">
-<div class="card-deck mb-3 text-center">
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h1 class="my-0 font-weight-normal">TUDN</h1>
+<div class="jumbotron">
+<div class="row">
+<div class="col">
+<div class="card  box-shadow ">
+<div class="embed-responsive embed-responsive-16by9">
+<script type="text/javascript">
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                        </script>
+</div>
+</div>
+</div>
 </div>
 
-<div class="card-body">
-<ul class="list-unstyled mt-3 mb-4">
-<div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" src="embedhls.html" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>
+
 </div>
-</ul>
-<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
-</div>
-</div>
-</div>
+<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
 <div class="sharethis-inline-share-buttons"></div>
 
 <br />
