--- a/en-vivo/tv-publica/index.html
+++ b/en-vivo/tv-publica/index.html
@@ -95,28 +95,22 @@ $("#navbar").load("../../html/navbar.html");
     });
 </script>
 <div class="container">
-<div class="card-deck mb-3 text-center">
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h1 class="my-0 font-weight-normal">TV Pública en VIVO Online</h1>
-<h2>Transmisión de la TV Pública en vivo</h2>
+<div class="jumbotron">
+<div class="row">
+<div class="col">
+<div class="card  box-shadow ">
+<div class="embed-responsive embed-responsive-16by9">
+<script type="text/javascript">
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                        </script>
+</div>
+</div>
+</div>
 </div>
 
-<div class="card-body">
-<ul class="list-unstyled mt-3 mb-4">
-<div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" src="https://sectigored.asia/mpdk2.html?get=aHR0cHM6Ly9hcmxvY2FsbGl2ZWNoYW5uZWxzZGFzaC5sY2RuLmNsYXJvdHYuY29tLmFyL0NvbnRlbnQvREFTSF9EQVNIX0ZLL0xpdmUvY2hhbm5lbChUVl9QVUJMSUNBKS9tYXN0ZXIubXBk&key=Zjg4NzM3NWQxYzdmMDA3ZmIxMDQ0N2U4NDU4MWJlNzA=&key2=ODE4MzAwNzkzMjM1OWEzY2YxNDUxOThiNTEyOTExOWM=" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>
+
 </div>
-<div align="left">
-<p><strong>Opciones:</strong></p>
-<a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1156" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1156'">Opción 1</a>
-<a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=Q2FuYWw3" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=Q2FuYWw3'">Opción 2</a>
-</div>
-</ul>
-<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
-</div>
-</div>
-</div>
+<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <img src="https://futbollibretv.net/img/logo-canal/TV_Publica.png" alt="Logo del canal TV Pública" title="TV Pública en vivo"><br><br>
